# travelAgent

./: .env.example  .gitignore  .gitmessage  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  demo_end_to_end.py  demo_langgraph.py  interactive_intent.py  interactive_langgraph.py  package.json  pyproject.toml  test_apis.py  test_calendar_agent.py  test_end_to_end.py  test_error_handling.py  test_export.py  test_geoapify_direct.py  test_intent.py  test_poi_agent.py  test_poi_search.py  test_route_agent.py  test_routing.py  test_weather_matching.py  visualize_graph.py
docs/: agents.md  api_integrations.md  architecture.md  getting_started.md
output/: itinerary.json  itinerary.md  trip.json  trip.md
src/travelmind/: __main__.py  exceptions.py
src/travelmind/agents/: calendar.py  export.py  intent.py  poi.py  route.py  weather.py
src/travelmind/api/: routes.py
src/travelmind/models/: itinerary.py  poi.py  request.py  weather.py
src/travelmind/orchestration/: graph.py
src/travelmind/services/: foursquare.py  geoapify.py  openmeteo.py  opentripmap.py  osm.py  routing.py
src/travelmind/utils/: cache.py  config.py  rate_limit.py
src/travelmind/workflow/: __init__.py  graph.py  nodes.py  state.py
static/: app.js  index.html  styles.css
tests/: conftest.py
tests/agents/: test_intent.py
tests/integration/: test_workflow.py
tests/unit/: test_cache.py
